# river-level-analysis

./: .firebaserc  .gitignore  .gitmodules  README.md  Regulations-for-Rowing-v1.5-Proposal.docx  build_dataset_by_day.ipynb  build_datasets.ipynb  cloudbuild.yaml  combine_datasets.ipynb  env.yml  environment.yml  firebase.json  model.ipynb  requirements.txt  river-level.code-workspace  ruff.toml  samconfig.toml  template.yaml
.devcontainer/: Dockerfile  devcontainer.json
backend/: Cargo.toml  Dockerfile  biome.json  build-container.sh  bun.lockb  cargo-tree.txt  cloudbuild.yaml  deploy.sh  package-lock.json  package.json  rustfmt.toml
backend/config/: default.json  dev.json  prod.json
backend/prediction/: environment.yml
backend/src/: config.bk.rs  config.rs  index.ts  main.rs
backend/src/leaks/: config.rs  errors.rs  mod.rs  models.rs
backend/src/level/: config.rs  data_store.rs  errors.rs  fetch_data.rs  forecast.rs  mod.rs  models.rs  observed.rs
backend/src/level_forecast/: fetch_data.rs  forecast.rs  mod.rs
backend/src/spills/: config.rs  errors.rs  mod.rs  models.rs
dashboard/: astro.config.mjs  biome.json  bun.lockb  package-lock.json  package.json  tailwind.config.mjs  tailwind.config.ts
dashboard-v2/: bun.lockb  generate-icons.sh  package.json
data/: river_levels.csv
data_collection/: main.py  pytest.ini  requirements.txt  test.py
frontend/: tsconfig.json
hydro-api/: pyproject.toml
hydrology_api/: __init__.py  pyproject.toml
infra/: bun.lockb  cloudbuild.yaml  main.tf  terraform.tfstate  terraform.tfstate.backup  tsconfig.json
(+165 files in other folders)
